// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Button> that renders a button should add classes when props are changed 1`] = `
<Button
  context="primary"
  isBlock={true}
  isLoading={true}
  size="large"
>
  <button
    className="Button Button--isBlock Button--isLoading Button--size_large"
    context="primary"
    disabled={false}
    type="button"
  >
    <span>
      Click me
    </span>
  </button>
</Button>
`;

exports[`<Button> that renders a button should render an ancor element if href is defined 1`] = `
<Button
  href="/"
>
  <a
    className="Button"
    href="/"
  >
    Click me
  </a>
</Button>
`;

exports[`<Button> that renders a button should render default button correctly 1`] = `
<Button>
  <button
    className="Button"
    disabled={false}
    type="button"
  >
    Click me
  </button>
</Button>
`;
